--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <!-- Navigation-->
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class="container px-5">
-                    <a class="navbar-brand" href="index.html">IAC - Immunization Action Coalition</a>
+                    <a class="navbar-brand" href="index.html">Immunization Action Coalition</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
@@ -48,19 +48,42 @@
             <!-- Header-->
             <header class="bg-dark py-5">
                 <div class="container px-5">
-                    <div class="row gx-5 align-items-center justify-content-center">
-                        <div class="col-lg-8 col-xl-7 col-xxl-6">
-                            <div class="my-5 text-center text-xl-start">
-                                <h1 class="display-5 fw-bolder text-white mb-2">A Bootstrap 5 template for modern businesses</h1>
-                                <p class="lead fw-normal text-white-50 mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit!</p>
-                                <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
-                                    <a class="btn btn-primary btn-lg px-4 me-sm-3" href="#features">Get Started</a>
-                                    <a class="btn btn-outline-light btn-lg px-4" href="#!">Learn More</a>
-                                </div>
-                            </div>
+                    <div id="demo" class="carousel slide" data-ride="carousel">
+                        <ul class="carousel-indicators">
+                          <li data-target="#demo" data-slide-to="0" class="active"></li>
+                          <li data-target="#demo" data-slide-to="1"></li>
+                          <li data-target="#demo" data-slide-to="2"></li>
+                        </ul>
+                        <div class="carousel-inner">
+                          <div class="carousel-item active">
+                            <img src="/assets/a_test_image.jpg" alt="Los Angeles" width="1100" height="500">
+                            <div class="carousel-caption">
+                              <h3>Los Angeles</h3>
+                              <p>We had such a great time in LA!</p>
+                            </div>   
+                          </div>
+                          <div class="carousel-item">
+                            <img src="chicago.jpg" alt="Chicago" width="1100" height="500">
+                            <div class="carousel-caption">
+                              <h3>Chicago</h3>
+                              <p>Thank you, Chicago!</p>
+                            </div>   
+                          </div>
+                          <div class="carousel-item">
+                            <img src="ny.jpg" alt="New York" width="1100" height="500">
+                            <div class="carousel-caption">
+                              <h3>New York</h3>
+                              <p>We love the Big Apple!</p>
+                            </div>   
+                          </div>
                         </div>
-                        <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center"><img class="img-fluid rounded-3 my-5" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." /></div>
-                    </div>
+                        <a class="carousel-control-prev" href="#demo" data-slide="prev">
+                          <span class="carousel-control-prev-icon"></span>
+                        </a>
+                        <a class="carousel-control-next" href="#demo" data-slide="next">
+                          <span class="carousel-control-next-icon"></span>
+                        </a>
+                      </div>
                 </div>
             </header>
             <!-- Features section-->
