--- a/index.html
+++ b/index.html
@@ -25,20 +25,20 @@
                             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                             <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-                            <li class="nav-item"><a class="nav-link" href="pricing.html">Pricing</a></li>
+                            <li class="nav-item"><a class="nav-link" href="pricing.html">Shop IAC</a></li>
                             <li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" id="navbarDropdownBlog" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Blog</a>
-                                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownBlog">
-                                    <li><a class="dropdown-item" href="blog-home.html">Blog Home</a></li>
-                                    <li><a class="dropdown-item" href="blog-post.html">Blog Post</a></li>
+                                <a class="nav-link dropdown-toggle" id="navbarDropdownPortfolio" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Everyone</a>
+                                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownPortfolio">
+                                    <li><a class="dropdown-item" href="portfolio-overview.html">Vaccine Basics</a></li>
+                                    <li><a class="dropdown-item" href="portfolio-item.html">Diseases</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" id="navbarDropdownPortfolio" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Portfolio</a>
-                                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownPortfolio">
-                                    <li><a class="dropdown-item" href="portfolio-overview.html">Portfolio Overview</a></li>
-                                    <li><a class="dropdown-item" href="portfolio-item.html">Portfolio Item</a></li>
+                                <a class="nav-link dropdown-toggle" id="navbarDropdownBlog" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Healthcare Professionals</a>
+                                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownBlog">
+                                    <li><a class="dropdown-item" href="blog-home.html">Handouts and Materials</a></li>
+                                    <li><a class="dropdown-item" href="blog-post.html">Vaccines</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -102,7 +102,7 @@
                     <img class="card-img-top" src="https://dummyimage.com/600x350/adb5bd/495057" alt="..." />
                     <div class="card-body p-4">
                         <div class="badge bg-primary bg-gradient rounded-pill mb-2">Media</div>
-                        <a class="text-decoration-none link-dark stretched-link" href="#!"><h5 class="card-title mb-3">Ask the Experts!</h5></a>
+                        <a class="text-decoration-none link-dark" href="#!"><h5 class="card-title mb-3">Ask the Experts!</h5></a>
                         <p class="card-text mb-0">Answers from IAC experts to more than 1,000 questions about vaccines and their use.</p>
                     </div>
                     <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
@@ -147,27 +147,30 @@
                     <div class="col mb-5 h-100">
                         <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-collection"></i></div>
                         <h2 class="h5">CDC COVID-19</h2>
-                        <p class="mb-0">Main page to all CDC COVID-19 vaccine information.</p>
-                    </div>
-                    <div class="col mb-5 h-100">
-                        <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-building"></i></div>
-                        <h2 class="h5">Ask the Experts!</h2>
-                        <p class="mb-0">Answers from IAC experts to more than 1,000 questions about vaccines and their use.<br />
-                        </p>
-                    </div>
-                    <div class="col mb-5 mb-md-0 h-100">
-                        <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-toggles2"></i></div>
-                        <h2 class="h5">IAC Express</h2>
-                        <p class="mb-0">Read the current issue of this weekly email newsletter.<br />
-                            <a class="btn btn-primary">Subscribe Today!</a>
+                        <p class="mb-0">Vaccine information about COVID-19.<br />
+                            <a class="btn btn-secondary mt-3 mb-5" href="https://www.cdc.gov/vaccines/covid-19/index.html">Visit CDC</a>
+
                         </p>
                     </div>
                     <div class="col h-100">
                         <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-toggles2"></i></div>
                         <h2 class="h5">Handouts</h2>
                         <p class="mb-0">Free educational materials for patients and staff. Over 250 materials from IAC experts ready for your use.<br />
-                            <a class="btn btn-primary">Learn More</a>
-                            </p>
+                            <a class="btn btn-secondary mt-3 mb-5" href="https://www.cdc.gov/vaccines/hcp/acip-recs/vacc-specific/covid-19.html">ACIP Recommendations</a>
+                        </p>
+                    </div>
+                    <div class="col mb-5 mb-md-0 h-100">
+                        <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-toggles2"></i></div>
+                        <h2 class="h5">IAC Express</h2>
+                        <p class="mb-0">Read the current issue of this weekly email newsletter.<br />
+                            <a class="btn btn-primary mt-3">Subscribe Today!</a>
+                        </p>
+                    </div>
+                    <div class="col mb-5 h-100">
+                        <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-building"></i></div>
+                        <h2 class="h5">Ask the Experts!</h2>
+                        <p class="mb-0">Answers from IAC experts to more than 1,000 questions about vaccines and their use.<br />
+                        </p>
                     </div>
                 </div>
             </div>
@@ -214,10 +217,10 @@
            
         </main>
         <!-- Footer-->
-        <footer class="bg-dark py-4 mt-auto">
+        <footer class="bg-dark py-4 mt-auto" style="background-color:white!important">
             <div class="container px-5">
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row">
-                    <div class="col-auto"><div class="small m-0 text-white">Copyright &copy; Your Website 2021</div></div>
+                    <div class="col-auto"><div class="small m-0 text-dark">Copyright &copy; Immunize.org 2021</div></div>
                     <div class="col-auto">
                         <a class="link-dark small" href="#!">Privacy</a>
                         <span class="text-white mx-1">&middot;</span>
