--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                         <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-collection"></i></div>
                         <h2 class="h5">CDC COVID-19</h2>
                         <p class="mb-0">Vaccine information about COVID-19.<br />
-                            <a class="btn btn-secondary mt-3 mb-5" href="https://www.cdc.gov/vaccines/covid-19/index.html">Visit CDC</a>
+                            <a class="btn btn-primary mt-3 mb-5" href="https://www.cdc.gov/vaccines/covid-19/index.html">Visit CDC</a>
 
                         </p>
                     </div>
@@ -156,7 +156,7 @@
                         <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-toggles2"></i></div>
                         <h2 class="h5">Handouts</h2>
                         <p class="mb-0">Free educational materials for patients and staff. Over 250 materials from IAC experts ready for your use.<br />
-                            <a class="btn btn-secondary mt-3 mb-5" href="https://www.cdc.gov/vaccines/hcp/acip-recs/vacc-specific/covid-19.html">ACIP Recommendations</a>
+                            <a class="btn btn-primary mt-3 mb-5" href="https://www.cdc.gov/vaccines/hcp/acip-recs/vacc-specific/covid-19.html">ACIP Recommendations</a>
                         </p>
                     </div>
                     <div class="col mb-5 mb-md-0 h-100">
